--- a/index+post+markdown+tags.jade
+++ b/index+post+markdown+tags.jade
@@ -35,7 +35,7 @@ html
 						li.site-nav-item
 							a.js-ajax-link(href="/") Lastest Post
 						li.site-nav-item
-							a.js-ajax-link.js-show-index(href="/") Browser Posts
+							a.js-ajax-link.js-show-index(href="/") All Posts
 						if has("about.md")
 							li.site-nav-item
 								a.js-ajax-link(href="/about.md") About
